# short-url

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: deploy.yaml  pull_request_check.yaml
alembic/: env.py
alembic/versions/: 2946711369c5_feat_added_user_role.py  300e77898bfe_feat_added_is_superadmin_to_user.py  3a66e4fa2cef_deleted_relationship.py  417fb09a29bc_feat_clicks_model.py  50b4118dde14_feat_ttl_columns.py  8a20c90081f6_feat_export_logs_attempt_2.py  908645ae0d50_maked_token_primary_key.py  99ea09cc8cdc_feat_credits_to_user_model.py  a00548bae38f_increased_token_length_limit.py  a4ef76c69b74_added_refresh_tokens.py  b5dbfccedd51_init.py  ca0823f1dd7b_feat_export_logs.py
keys/: README.md
src/app/: main.py  middlewares.py  tasks.py
src/app/api/: deps.py
src/app/api/routers/: auth.py  credits.py  health.py  url.py
src/app/core/: celery.py  database.py  enums.py  exception_handlers.py  exceptions.py  hashing.py  lifespan.py  limiter.py  logging.py  redis_client.py  settings.py  task_runner.py
src/app/models/: click.py  export_log.py  refresh_token.py  short_url.py  user.py
src/app/repositories/: celery.py  click.py  export_log_repository.py  refresh_token_reposiotry.py  short_url_repository.py  user_repository.py
src/app/schemas/: click.py  export_log.py  short-url.py  short_url.py  token.py  user.py
src/app/services/: click_service.py  export_service.py  qrcode_service.py  short_url_service.py  user_service.py
src/app/utils/: cache.py  crypt.py  hash.py  jwt.py  qrcode.py  retry.py  slug.py
src/frontend/: auth.html  config.js  dashboard.html  index.html  login.html  register.html  styles.css
tests/: conftest.py  test_cache.py  test_clicks_permission.py  test_limiter.py  test_login.py  test_logout.py  test_qrcode.py  test_refresh.py  test_register.py
tests/admin/: test_change_role.py  test_export_logs.py  test_exports.py  test_get_all.py
tests/unit/: test_crypt.py  test_enums.py  test_hash.py  test_incremetnt_clicks.py  test_jwt.py  test_qrcode.py  test_retry.py  test_token.py
tests/url/: test_create_url.py  test_credits.py  test_delete.py  test_edit_slug.py  test_get_info.py  test_redirect.py  test_ttl.py
tests/utils/: test_cache.py
