[project]
name = "short-url"
version = "0.1.0"
description = "Url shortener"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "cryptography==49.0.0",
    "fastapi>=0.138.0",
    "pandas>=3.0.3",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pydantic[email]>=2.13.4",
    "pyjwt>=2.13.0",
    "qrcode>=8.2",
    "redis>=8.0.0",
    "slowapi>=0.1.10",
    "structlog>=26.1.0",
    "uvicorn>=0.49.0",
    "xlsxwriter>=3.2.9",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "faker>=40.23.0",
    "fakeredis>=2.36.2",
    "httpx>=0.28.1",
    "openpyxl>=3.1.5",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
exclude = ["alembic"]
[tool.ruff.lint]
per-file-ignores = { "tests/*.py" = ["F401"] }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:passlib.handlers.argon2",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
]
minversion = "8.0"
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
